--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-    <meta name="title" content="Sorteio Chá Rifa do Henrique">
-    <meta name="description" content="Sorteador da Rifa em prol do Chá de Fraldas do Henrique"/>
+    <meta name="title" content="Sorteio Chá Rifa do Eduardo">
+    <meta name="description" content="Sorteador da Rifa em prol do Chá de Fraldas do Eduardo"/>
 
-    <meta property="og:title" content="Sorteio Chá Rifa do Henrique">
-    <meta property="og:description" content="Sorteador da Rifa em prol do Chá de Fraldas do Henrique">
+    <meta property="og:title" content="Sorteio Chá Rifa do Eduardo">
+    <meta property="og:description" content="Sorteador da Rifa em prol do Chá de Fraldas do Eduardo">
     <meta property="og:url" content="https://rifa.mateusrios.com.br/">
     <meta property="og:image" content="%PUBLIC_URL%/og.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Sorteio Chá Rifa do Henrique">
+    <meta property="og:site_name" content="Sorteio Chá Rifa do Eduardo">
 
     <link rel="canonical" href="https://rifa.mateusrios.com.br/">
     
@@ -35,7 +35,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Sorteador da Rifa do Henrique</title>
+    <title>Sorteador da Rifa do Eduardo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
